infrastructure/kubernetes/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: eazybank
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-internal-services
  namespace: eazybank
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/eazybank/sa/accounts-service
              - cluster.local/ns/eazybank/sa/cards-service
              - cluster.local/ns/eazybank/sa/loans-service
              - cluster.local/ns/eazybank/sa/gateway-service
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: eazybank-gateway
  namespace: eazybank
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: eazybank-tls-cert
      hosts:
        - "api.eazybank.com"
